Fix z-index

--- a/app/assets/stylesheets/uploadcare/_config.pcss
+++ b/app/assets/stylesheets/uploadcare/_config.pcss
@@ -1,9 +1,6 @@
 :root {
   /* Font */
   --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
-
-  /* Helpers */
-  --z-index: 2147483600;
 }
 
 @custom-media --desktop (min-width: 760px);
