--- a/app/assets/stylesheets/uploadcare/blocks/dialog/dialog.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/dialog/dialog.pcss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: var(--z-index);
+  z-index: 2147483647;
 
   overflow: hidden;
 
