--- a/app/assets/stylesheets/uploadcare/blocks/dialog/dialog__close.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/dialog/dialog__close.pcss
@@ -2,7 +2,6 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: calc(var(--z-index) + 1);
 
   box-sizing: border-box;
 
