--- a/app/assets/stylesheets/uploadcare/blocks/dialog/dialog__menu_opened.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/dialog/dialog__menu_opened.pcss
@@ -4,7 +4,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      z-index: 2147483640;
+      z-index: 50;
     }
   }
 
