--- a/app/assets/stylesheets/uploadcare/blocks/file-sources/file-sources__item.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/file-sources/file-sources__item.pcss
@@ -2,7 +2,7 @@
   flex-shrink: 0;
 
   position: relative;
-  z-index: 2147483610;
+  z-index: 2;
 
   overflow: hidden;
 
@@ -14,7 +14,7 @@
   text-align: left;
 
   &:nth-child(4) {
-    z-index: 2147483609;
+    z-index: 1;
 
     margin-right: 70px;
   }
