--- a/app/assets/stylesheets/uploadcare/blocks/file-sources/file-sources__list.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/file-sources/file-sources__list.pcss
@@ -31,7 +31,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2147483611;
+    z-index: 3;
 
     width: 100%;
     height: 100%;
@@ -47,7 +47,7 @@
     position: absolute;
     top: 0;
     left: 100px;
-    z-index: 2147483611;
+    z-index: 3;
 
     width: 95px;
     height: 40px;
