--- a/app/assets/stylesheets/uploadcare/blocks/menu/menu.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/menu/menu.pcss
@@ -16,7 +16,7 @@
       flex-shrink: 0;
 
       position: relative;
-      z-index: 2147483640;
+      z-index: 50;
 
       width: 70px;
 
